--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "main": "core/index.js",
   "devDependencies": {
+    "babel-cli": "^6.1.18",
     "babel-core": "^6.1.4",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.1.0",
@@ -46,6 +47,7 @@
   "scripts": {
     "start": "$(npm bin)/webpack-dev-server --config demo/webpack.config.js --history-api-fallback --content-base demo",
     "test": "$(npm bin)/mocha --compilers js:babel-core/register core/**/*.test.js",
-    "watch": "$(npm bin)/mocha --watch --compilers js:babel-core/register core/**/*.test.js"
+    "watch": "$(npm bin)/mocha --watch --compilers js:babel-core/register core/**/*.test.js",
+    "prepublish": "sh scripts/prepublish.sh"
   }
 }
